[package]
name = "tablestream"
version = "0.1.0"
edition = "2018"
repository = "https://github.com/NfNitLoop/tablestream"
readme = "README.md"


[dependencies]
# Used to determine terminal width.
# (And maybe eventually for colors.)
crossterm = "*"

unicode-truncate = "*"
unicode-width = "*"


[dev-dependencies.structopt]
# Used by example.rs
version = "*"