[package]
name = "tablestream"
description = "A streaming table formatter for the console"
keywords = ["table", "console", "format", "stream", "unicode"]
categories = ["command-line-interface", "visualization"]
license = "MIT OR Apache-2.0"

version = "0.1.3"
edition = "2018"
repository = "https://github.com/NfNitLoop/tablestream"
documentation = "https://docs.rs/tablestream"
readme = "README.md"

exclude = [
    # This seems like unnecessary bloat:
    "*.gif",
]

[dependencies]
# Used to determine terminal width.
# (And maybe eventually for colors.)
crossterm = "0.28"

unicode-truncate = "0.2.0"
unicode-width = "0.1.8"


[dev-dependencies.structopt]
# Used by example.rs
version = "0.3.22"